[package]
name = "cosmwasm-vm"
version = "0.6.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "VM bindings to run cosmwams contracts"
repository = "https://github.com/confio/cosmwasm/tree/master/lib/vm"
license = "Apache-2.0"

[badges]
circle-ci = { repository = "confio/cosmwasm", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["default-singlepass"]
# multiple backends may be activated here (available through eg. backends::cranelift::*)
cranelift = ["wasmer-clif-backend"]
singlepass = ["wasmer-singlepass-backend"]
# default selects which *one* is re-exported in backends/mod.rs (available through eg backends::*)
default-cranelift = ["wasmer-clif-backend"]
default-singlepass = ["wasmer-singlepass-backend"]
# enable this for better error reporting
backtraces = ["snafu/backtraces"]

[dependencies]
cosmwasm = { path = "../..", version = "0.6.2" }
serde-json-wasm = "0.1.0"
wasmer-runtime-core = "0.12.0"
wasmer-middleware-common = "0.12.0"
wasmer-clif-backend = {version = "0.12.0", optional = true }
wasmer-singlepass-backend = {version = "0.12.0", optional = true }
schemars = "0.5"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.5.0", default-features = false, features = ["rust_1_30"] }
sha2 = "0.8.0"
hex = "0.3.1"
memmap = "0.7"
lru = "0.3.1"
wasm-nm = "0.2.1"

[dev-dependencies]
tempfile = "3.1.0"
wabt = "0.9.1"
