[package]
name = "assemblyscript-poc-tests"
description = "Integration tests for the AssemblyScript proof of concept"
version = "0.1.0"
authors = ["Simon Warta <webmaster128@users.noreply.github.com>"]
edition = "2018"
license = "(WTFPL OR 0BSD OR Unlicense OR MIT OR BSD-3-Clause)"
repository = "https://github.com/confio/cosmwasm"

[features]
default = ["cranelift"]
backtraces = [ "cosmwasm/backtraces", "cosmwasm-vm/backtraces" ]
cranelift = [ "cosmwasm-vm/default-cranelift"]
singlepass = [ "cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm = { path = "../../..", version = "0.6.3" }
schemars = "=0.5"
serde = { version = "=1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = { path = "../../../lib/vm", version = "0.6.3", default-features = false }
serde_json = "1.0"
